--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "styled-components": "^6.1.16"
   },
