--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-input-mask": "^2.0.4",
+    "react-input-mask-next": "^3.0.0-alpha.12",
     "react-toastify": "^11.0.5",
     "styled-components": "^6.1.16"
   },
@@ -22,6 +24,7 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "@types/react-input-mask": "^3.0.6",
     "@types/react-toastify": "^4.0.2",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
